modified:   android/app/capacitor.build.gradle 	modified:   android/app/src/main/AndroidManifest.xml 	modified:   android/capacitor.settings.gradle 	modified:   changelog.txt 	modified:   package-lock.json 	modified:   package.json 	modified:   src/app/app.module.ts 	modified:   src/app/models/ilibro.ts 	modified:   src/app/models/iuser.ts 	modified:   src/app/pages/crearlibro/crearlibro.page.ts 	modified:   src/app/pages/home/home.module.ts 	modified:   src/app/pages/home/home.page.html 	modified:   src/app/pages/home/home.page.ts 	new file:   src/app/pages/mapa/mapa-routing.module.ts 	new file:   src/app/pages/mapa/mapa.component.html 	new file:   src/app/pages/mapa/mapa.component.scss 	new file:   src/app/pages/mapa/mapa.component.spec.ts 	new file:   src/app/pages/mapa/mapa.component.ts 	new file:   src/app/pages/mapa/mapa.module.ts 	modified:   src/app/pages/password-reset/password-reset.module.ts 	modified:   src/app/pages/perfil/perfil.module.ts 	modified:   src/app/pages/perfil/perfil.page.html 	modified:   src/app/pages/perfil/perfil.page.scss 	modified:   src/app/pages/perfil/perfil.page.ts 	modified:   src/app/pages/signup/signup.module.ts 	modified:   src/app/pages/signup/signup.page.html 	modified:   src/app/pages/signup/signup.page.ts 	modified:   src/app/services/auth.service.ts 	new file:   src/app/services/googlemaps.service.spec.ts 	new file:   src/app/services/googlemaps.service.ts 	modified:   src/app/services/libros.service.ts 	modified:   src/app/services/usuaris.service.ts 	modified:   src/environments/environment.ts 	modified:   workaround3.txt

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -5,11 +5,13 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">home</ion-title>
     </ion-toolbar>
   </ion-header>
+  <app-mapa>map</app-mapa>
   <ion-list>
     <ion-list-header>
       <ion-title>Listado  de libros</ion-title>
@@ -24,11 +26,13 @@
       
         <ion-card-content>
           {{libro.valoracion}}  {{libro.descripcion}}
-          <ion-label> Precio:  {{libro.precio}} <ion-icon name="cash">Comprar</ion-icon></ion-label>  
+          <ion-label> Precio:  {{libro.precio|currency}} </ion-label>  
+          <ion-label> Vendedor:  {{libro.displayPropietario}} </ion-label>  
           <ion-button color="danger" (click)="comprarLibro(libro)" >Buy</ion-button>
         </ion-card-content>
       </ion-card>
     
     </ion-item>
   </ion-list>
+  
 </ion-content>
