modified:   android/app/src/main/AndroidManifest.xml 	modified:   src/app/pages/crearlibro/crearlibro.page.ts 	modified:   src/app/pages/home/home.module.ts 	modified:   src/app/pages/home/home.page.html 	modified:   src/app/pages/home/home.page.ts 	modified:   src/app/pages/mapa/mapa.component.html 	modified:   src/app/pages/mapa/mapa.component.scss 	modified:   src/app/pages/mapa/mapa.component.ts 	modified:   src/app/pages/mapa/mapa.module.ts 	modified:   src/app/pages/perfil/modal-libro/modal-libro.page.ts 	modified:   src/app/pages/perfil/perfil.page.html 	modified:   src/app/pages/perfil/perfil.page.scss 	modified:   src/app/pages/perfil/perfil.page.ts 	modified:   src/app/pages/signup/signup.module.ts 	modified:   src/app/pages/signup/signup.page.html 	modified:   src/app/pages/signup/signup.page.ts 	modified:   src/app/services/auth.service.ts 	modified:   src/app/services/googlemaps.service.ts 	modified:   src/app/services/libros.service.ts 	modified:   src/app/services/photo.service.ts 	modified:   src/app/services/usuaris.service.ts 	modified:   src/environments/environment.prod.ts 	modified:   src/environments/environment.ts 	modified:   src/index.html

--- a/src/app/pages/mapa/mapa.component.html
+++ b/src/app/pages/mapa/mapa.component.html
@@ -1,4 +1,8 @@
 
 <capacitor-google-map id="map" #map witdh:200px>mapa?
-
+    
 </capacitor-google-map>
+<ion-chip class="miubicacion" (click)="mylocation()">
+    <ion-label class="normal">My ubicacion actual</ion-label>
+    <ion-icon name="locate"></ion-icon>
+</ion-chip>
