--- a/src/app/pages/perfil/perfil.page.scss
+++ b/src/app/pages/perfil/perfil.page.scss
@@ -34,3 +34,10 @@ ion-avatar {
     justify-content: center;
   }
 
+
+  .aceptar{
+    position: fixed;
+    top: 55px;
+    right: 5px;
+    background-color: #8090eb;
+}
