--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -11,11 +11,13 @@
       <ion-title size="large">home</ion-title>
     </ion-toolbar>
   </ion-header>
-  <app-mapa>map</app-mapa>
+
+  <app-mapa [markersPositions]="markersPositions"></app-mapa>
+  
   <ion-list>
-    <ion-list-header>
-      <ion-title>Listado  de libros</ion-title>
-    </ion-list-header>
+    
+      <ion-title><H1 style="justify-content: center;">Listado  de libros</H1></ion-title>
+   
     <ion-item *ngFor="let libro of libros$|async">
       <ion-card>
         <img alt="Foto del libro {{libro.titulo}}" src="{{libro.imageUrl}}" />
