modified:   package-lock.json 	modified:   package.json 	modified:   src/app/pages/crearlibro/crearlibro.module.ts 	modified:   src/app/pages/crearlibro/crearlibro.page.html 	modified:   src/app/pages/crearlibro/crearlibro.page.ts 	modified:   src/app/pages/home/home.page.ts 	modified:   src/app/pages/login/login.page.ts 	modified:   src/app/pages/signup/signup.page.scss 	new file:   src/app/services/utils.service.ts

--- a/src/app/pages/crearlibro/crearlibro.page.html
+++ b/src/app/pages/crearlibro/crearlibro.page.html
@@ -69,9 +69,14 @@
         <ion-col>
           <ion-button type="submit" color="primary" shape="full" expand="block" [disabled]="!formLibro.valid">Create</ion-button>
         </ion-col>
+   
       </ion-row>
-      
+      <ion-button (click)="scan()" shape="full" >
+        Escanea el QR del libro: 
+        <ion-icon name="scan"></ion-icon>
+      </ion-button>
     </form>
   </ion-list>
-  
+
+ 
 </ion-content>
