--- a/src/app/pages/signup/signup.page.scss
+++ b/src/app/pages/signup/signup.page.scss
@@ -25,3 +25,11 @@
     }
   }
 }
+.miubicacion{
+  position: fixed;
+  
+  background: yellow;
+  background-color: #8090eb;
+  top: 55px;
+  right: 10px;
+}
