modified:   android/app/capacitor.build.gradle 	modified:   android/app/src/main/AndroidManifest.xml 	modified:   android/app/src/main/res/drawable-land-hdpi/splash.png 	modified:   android/app/src/main/res/drawable-land-mdpi/splash.png 	modified:   android/app/src/main/res/drawable-land-xhdpi/splash.png 	new file:   android/app/src/main/res/drawable-land-xhdpi/splashori.png 	modified:   android/app/src/main/res/drawable-land-xxhdpi/splash.png 	new file:   android/app/src/main/res/drawable-land-xxhdpi/splashori.png 	modified:   android/app/src/main/res/drawable-land-xxxhdpi/splash.png 	new file:   android/app/src/main/res/drawable-land-xxxhdpi/splashori.png 	modified:   android/app/src/main/res/drawable-port-hdpi/splash.png 	new file:   android/app/src/main/res/drawable-port-hdpi/splashori4.png 	modified:   android/app/src/main/res/drawable-port-mdpi/splash.png 	new file:   android/app/src/main/res/drawable-port-mdpi/splashori.png 	modified:   android/app/src/main/res/drawable-port-xhdpi/splash.png 	new file:   android/app/src/main/res/drawable-port-xhdpi/splashori.png 	modified:   android/app/src/main/res/drawable-port-xxhdpi/splash.png 	new file:   android/app/src/main/res/drawable-port-xxhdpi/splashori.png 	modified:   android/app/src/main/res/drawable-port-xxxhdpi/splash.png 	new file:   android/app/src/main/res/drawable-port-xxxhdpi/splashori.png 	modified:   android/app/src/main/res/drawable/splash.png 	modified:   android/app/src/main/res/mipmap-hdpi/ic_launcher.png 	modified:   android/app/src/main/res/mipmap-hdpi/ic_launcher_foreground.png 	new file:   android/app/src/main/res/mipmap-hdpi/ic_launcher_foregroundori.png 	modified:   android/app/src/main/res/mipmap-hdpi/ic_launcher_round.png 	new file:   android/app/src/main/res/mipmap-hdpi/ic_launcher_roundori.png 	new file:   android/app/src/main/res/mipmap-hdpi/ic_launcherori.png 	modified:   android/app/src/main/res/mipmap-mdpi/ic_launcher.png 	modified:   android/app/src/main/res/mipmap-mdpi/ic_launcher_f

--- a/src/app/pages/perfil/perfil.page.html
+++ b/src/app/pages/perfil/perfil.page.html
@@ -129,7 +129,7 @@
     </ion-item>
 
     <ion-button expand="full" type="button" [disabled]="!formperfil.dirty" (click)="actualizaPerfil()">Actualizar perfil</ion-button>
-    <ion-button expand="full" type="button" (click)="returnHome()">Volver a homer</ion-button>
+    <ion-button expand="full" type="button" (click)="returnHome()">Volver a home</ion-button>
 
   </ion-form>
   
@@ -152,7 +152,7 @@
       
         <ion-card-content>
           {{libro.valoracion}} - {{libro.descripcion}}
-          <p>Precio: {{libro.precio}}<ion-icon name="coin"></ion-icon> </p>
+          <p>Precio: {{libro.precio|currency}}</p>
           <ion-button (click)="openModal(libro)"><ion-icon name="create-outline"></ion-icon></ion-button>
           <ion-button (click)='deleteLibro(libro)'><ion-icon name="trash-outline"></ion-icon></ion-button>
         </ion-card-content>
@@ -171,21 +171,21 @@
     </ion-card-header>
     <ion-card-content>
       {{libroVend.valoracion}} - {{libroVend.descripcion}}
-      <p>Precio: {{libroVend.precio}}<ion-icon name="coin"></ion-icon> </p>
+      <p>Precio: {{libroVend.precio|currency}} </p>
       
     </ion-card-content>
   </ion-card>
 
   <ion-title> Listado de libros comprados</ion-title>
 
-<ion-card *ngFor="let libroComp of librosComprados">
+<ion-card  *ngFor="let libroComp of librosComprados" >
   <ion-card-header>
       <ion-card-title >{{libroComp.titulo}}</ion-card-title>
       <ion-card-subtitle>{{libroComp.categoria}}</ion-card-subtitle>
   </ion-card-header>
   <ion-card-content>
     {{libroComp.valoracion}} - {{libroComp.descripcion}}
-    <p>Precio: {{libroComp.precio}}<ion-icon name="coin"></ion-icon> </p>
+    <p>Precio: {{libroComp.precio|currency}}</p>
     
   </ion-card-content>
 </ion-card>
